--- a/src/components/GeneralNode.css
+++ b/src/components/GeneralNode.css
@@ -1,10 +1,9 @@
-.general-node {
+/* .general-node {
   background: #ffffff;
-  border: 2px solid #000000;
+  border: 1px solid #000000;
   border-radius: 5px;
-  min-width: 140px;
-  padding: 13px;
-  font-family: 'Courier New', monospace;
+  min-width: 120px;
+  padding: 12px;
   position: relative;
   text-align: center;
 }
@@ -16,16 +15,15 @@
   font-weight: 500;
   font-size: 14px;
   text-align: center;
-  font-family: 'Courier New', monospace;
   color: #000000;
   white-space: nowrap;
 }
 
 .react-flow__handle {
-  width: 10px;
-  height: 10px;
+  width: 5px;
+  height: 5px;
   background: #000000;
-  border: 2px solid #ffffff;
+  border: 1px solid #ffffff;
   border-radius: 50%;
   box-shadow: 0 0 0 1px #000000;
 }
@@ -51,7 +49,6 @@
   color: #666;
   margin-bottom: 2px;
   font-weight: 500;
-  font-family: 'Courier New', monospace;
 }
 
 .midput-input {
@@ -62,11 +59,12 @@
   font-size: 11px;
   background-color: white;
   box-sizing: border-box;
-  font-family: 'Courier New', monospace;
 }
 
 .midput-input:focus {
   outline: none;
   border-color: #3b82f6;
   box-shadow: 0 0 0 1px #3b82f6;
-}
+} */
+
+
